--- a/index.html
+++ b/index.html
@@ -62,11 +62,7 @@
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-          <li><a class="nav-link scrollto">
-            <form class="" action="index.php" method="POST">
-              <button type="submit" name="button">Archivos</button>
-            </form></a>
-          </li>
+          <li><a class="getstarted scrollto" href="#about">Sobre nosotros</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
