Main web updated

--- a/index.html
+++ b/index.html
@@ -26,9 +26,6 @@
   <link href="assets/css/style.css" rel="stylesheet">
 
   <!-- =======================================================
-  * Template Name: FlexStart - v1.2.0
-  * Template URL: https://bootstrapmade.com/flexstart-bootstrap-startup-template/
-  * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
 </head>
@@ -51,6 +48,7 @@
           <li><a class="nav-link scrollto" href="#team">Equipo</a></li>
           <li class="dropdown"><a href="#"><span>Menú</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
+              <li><a href="#">Proyectos</a></li>
               <li><a href="#">Baúl imágenes</a></li>
               <li class="dropdown"><a href="#"><span>Próximamente</span> <i class="bi bi-chevron-right"></i></a>
                 <ul>
@@ -129,30 +127,32 @@
     </section><!-- End About Section -->
 
     <!-- ======= Values Section ======= -->
-    <section id="values" class="values">
+    <section id="contenido" class="contenido">
 
       <div class="container" data-aos="fade-up">
 
         <header class="section-header">
-          <h2>Our Values</h2>
-          <p>Odit est perspiciatis laborum et dicta</p>
+          <h2>Contenido</h2>
+          <p>Nuestros proyectos más recientes</p>
         </header>
 
         <div class="row">
 
           <div class="col-lg-4">
             <div class="box" data-aos="fade-up" data-aos-delay="200">
-              <img src="assets/img/values-1.png" class="img-fluid" alt="">
-              <h3>Ad cupiditate sed est odio</h3>
-              <p>Eum ad dolor et. Autem aut fugiat debitis voluptatem consequuntur sit. Et veritatis id.</p>
+              <img src="assets/img/values-pacman.png" class="img-fluid" alt="" style="width: 80%; height: 60%;">
+              <h3>P4C-MAN 3D</h3>
+              <p>Nuestro primer juego 3D en Unity.</p>
+              <a href="assets/download/P4C-MAN 3D.rar" download><button type="button" class="btn btn-primary">Descargar</button></a>
             </div>
           </div>
 
           <div class="col-lg-4 mt-4 mt-lg-0">
             <div class="box" data-aos="fade-up" data-aos-delay="400">
-              <img src="assets/img/values-2.png" class="img-fluid" alt="">
-              <h3>Voluptatem voluptatum alias</h3>
-              <p>Repudiandae amet nihil natus in distinctio suscipit id. Doloremque ducimus ea sit non.</p>
+              <img src="assets/img/values-android.png" class="img-fluid" alt="" style="width: 80%; height: 60%;">
+              <h3>Bloc de notas</h3>
+              <p>Aplicación móvil con base de datos.</p>
+              <a href="assets/download/bloc-notas.apk" download><button type="button" class="btn btn-primary">Descargar</button></a>
             </div>
           </div>
 
@@ -181,7 +181,7 @@
               <i class="bi bi-emoji-smile"></i>
               <div>
                 <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
-                <p>Happy Clients</p>
+                <p>Happy clients</p>
               </div>
             </div>
           </div>
@@ -190,7 +190,7 @@
             <div class="count-box">
               <i class="bi bi-journal-richtext" style="color: #ee6c20;"></i>
               <div>
-                <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1" class="purecounter"></span>
+                <span data-purecounter-start="0" data-purecounter-end="16" data-purecounter-duration="1" class="purecounter"></span>
                 <p>Projects</p>
               </div>
             </div>
@@ -200,7 +200,7 @@
             <div class="count-box">
               <i class="bi bi-headset" style="color: #15be56;"></i>
               <div>
-                <span data-purecounter-start="0" data-purecounter-end="1463" data-purecounter-duration="1" class="purecounter"></span>
+                <span data-purecounter-start="0" data-purecounter-end="380" data-purecounter-duration="1" class="purecounter"></span>
                 <p>Hours Of Support</p>
               </div>
             </div>
@@ -210,7 +210,7 @@
             <div class="count-box">
               <i class="bi bi-people" style="color: #bb0852;"></i>
               <div>
-                <span data-purecounter-start="0" data-purecounter-end="15" data-purecounter-duration="1" class="purecounter"></span>
+                <span data-purecounter-start="0" data-purecounter-end="3" data-purecounter-duration="1" class="purecounter"></span>
                 <p>Hard Workers</p>
               </div>
             </div>
