--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 Quisquam vel ut sint cum eos hic dolores aperiam. Sed deserunt et. Inventore et et dolor consequatur itaque ut voluptate sed et. Magnam nam ipsum tenetur suscipit voluptatum nam et est corrupti.
               </p>
               <div class="text-center text-lg-start">
-                <a href="#" class="btn-read-more d-inline-flex align-items-center justify-content-center align-self-center">
+                <a href="#contenido" class="btn-read-more d-inline-flex align-items-center justify-content-center align-self-center">
                   <span>Proyectos</span>
                   <i class="bi bi-arrow-right"></i>
                 </a>
