Main web updated

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-          <li><a class="nav-link scrollto" href="#about">About</a></li>
+          <li><a class="nav-link scrollto active" href="#hero">Inicio</a></li>
+          <li><a class="nav-link scrollto" href="#contenido">Proyectos</a></li>
           <li><a class="nav-link scrollto" href="#team">Equipo</a></li>
           <li class="dropdown"><a href="#"><span>Menú</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
@@ -103,7 +103,7 @@
 
           <div class="col-lg-6 d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="200">
             <div class="content">
-              <h3>Who We Are</h3>
+              <h3>¿Quiénes somos?</h3>
               <h2>Expedita voluptas omnis cupiditate totam eveniet nobis sint iste. Dolores est repellat corrupti reprehenderit.</h2>
               <p>
                 Quisquam vel ut sint cum eos hic dolores aperiam. Sed deserunt et. Inventore et et dolor consequatur itaque ut voluptate sed et. Magnam nam ipsum tenetur suscipit voluptatum nam et est corrupti.
@@ -149,7 +149,7 @@
 
           <div class="col-lg-4 mt-4 mt-lg-0">
             <div class="box" data-aos="fade-up" data-aos-delay="400">
-              <img src="assets/img/values-android.png" class="img-fluid" alt="" style="width: 80%; height: 60%;">
+              <img src="assets/img/values-android.png" class="img-fluid" alt="" style="width: 90%; height: 60%;">
               <h3>Bloc de notas</h3>
               <p>Aplicación móvil con base de datos.</p>
               <a href="assets/download/bloc-notas.apk" download><button type="button" class="btn btn-primary">Descargar</button></a>
@@ -158,8 +158,8 @@
 
           <div class="col-lg-4 mt-4 mt-lg-0">
             <div class="box" data-aos="fade-up" data-aos-delay="600">
-              <img src="assets/img/values-3.png" class="img-fluid" alt="">
-              <h3>Fugit cupiditate alias nobis.</h3>
+              <img src="assets/img/values-33.png" class="img-fluid" alt="">
+              <h3>Animación <i>Among us.</i></h3>
               <p>Quam rem vitae est autem molestias explicabo debitis sint. Vero aliquid quidem commodi.</p>
             </div>
           </div>
@@ -227,8 +227,8 @@
       <div class="container" data-aos="fade-up">
 
         <header class="section-header">
-          <h2>Team</h2>
-          <p>Our hard working team</p>
+          <h2>Equipo</h2>
+          <p>Nuestro equipazo</p>
         </header>
 
         <div class="row gy-4">
@@ -304,7 +304,7 @@
       <div class="container" data-aos="fade-up">
 
         <header class="section-header">
-          <h2>Contact</h2>
+          <h2>Contacto</h2>
           <p>Contact Us</p>
         </header>
 
@@ -317,14 +317,14 @@
                 <div class="info-box">
                   <i class="bi bi-geo-alt"></i>
                   <h3>Address</h3>
-                  <p>A108 Adam Street,<br>New York, NY 535022</p>
+                  <p>Tenerife,<br>Islas Canarias</p>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="info-box">
                   <i class="bi bi-telephone"></i>
                   <h3>Call Us</h3>
-                  <p>+1 5589 55488 55<br>+1 6678 254445 41</p>
+                  <p>+92 5589 554 55<br>+92 6678 2544 41</p>
                 </div>
               </div>
               <div class="col-md-6">
