--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
   <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
@@ -97,7 +100,6 @@
   <main id="main">
     <!-- ======= About Section ======= -->
     <section id="about" class="about">
-
       <div class="container" data-aos="fade-up">
         <div class="row gx-0">
 
@@ -160,13 +162,32 @@
             <div class="box" data-aos="fade-up" data-aos-delay="600">
               <img src="assets/img/values-33.png" class="img-fluid" alt="">
               <h3>Animación <i>Among us.</i></h3>
-              <p>Quam rem vitae est autem molestias explicabo debitis sint. Vero aliquid quidem commodi.</p>
+              <p>Animación realizada en Blender.</p>
+              <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#animacion">Acceder</button>
             </div>
           </div>
-
         </div>
-
       </div>
+
+      <div id="animacion" class="modal fade" role="dialog">
+            <div class="modal-dialog modal-lg">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h3 class="modal-title">Animación</h3>
+                    </div>
+                    <div class="modal-body">
+                          <video 
+                          autoplay 
+                          muted 
+                          loop
+                          width="100%" height="auto"><source src="assets/download/among-animacion.mp4" type="video/mp4"></video>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                  </div>
+              </div>
+          </div> 
+        </div>
 
     </section><!-- End Values Section -->
 
